--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-webpack": "^1.7.0",
     "lodash": "^3.0.0",
+    "lodash-es": "^3.10.1",
     "mocha": "^2.2.5",
     "phantomjs": "^1.9.17",
     "rimraf": "^2.4.2",
